Bugfix: dark mode "horizontal split" the message area was white

--- a/dev/Styles/User/Layout.less
+++ b/dev/Styles/User/Layout.less
@@ -342,7 +342,6 @@ html.rl-bottom-preview-pane:not(.rl-mobile) {
 			left: 0;
 			right: 5px;
 			box-shadow: none;
-			background-color: var(--message-bg-color, #fff);
 		}
 	}
 }
